# simd-json-schema

./: Cargo.toml  README.md
src/: lib.rs
src/common/: error.rs
src/json_dsl/: builder.rs  errors.rs  mod.rs  param.rs
src/json_dsl/validators/: allowed_values.rs  at_least_one_of.rs  exactly_one_of.rs  mod.rs  mutually_exclusive.rs  regex.rs  rejected_values.rs
src/json_schema/: builder.rs  error.rs  helpers.rs  mod.rs  primitive_types.rs  schema.rs  scope.rs
src/json_schema/keywords/: const_.rs  contains.rs  dependencies.rs  enum_.rs  format.rs  items.rs  maxmin.rs  maxmin_items.rs  maxmin_length.rs  maxmin_properties.rs  mod.rs  multiple_of.rs  not.rs  of.rs  pattern.rs  properties.rs  property_names.rs  ref_.rs  required.rs  type_.rs  unique_items.rs
src/json_schema/validators/: const_.rs  contains.rs  dependencies.rs  enum_.rs  formats.rs  items.rs  maxmin.rs  maxmin_items.rs  maxmin_length.rs  maxmin_properties.rs  mod.rs  multiple_of.rs  not.rs  of.rs  pattern.rs  properties.rs  property_names.rs  ref_.rs  required.rs  type_.rs  unique_items.rs
